# Hokage-Discord-Bot

./: README.md  main.py  mainbank.json  prefixes.json  pyproject.toml  run_forever.py
cogs/: 8ball.py  DM.py  RPS.py  admin.py  anime.py  avatar.py  bi.py  change_status.py  help.py  images.py  info.py  intro.py  memes.py  music.py  spam.py  warn.py  wikipedia.py
cogs/images/data/: images.db
