[tool.poetry]
name = "incrediblejaggedautotote"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
psutil = "^5.8.0"
praw = "^7.1.4"
youtube-dl = "^2021.2.10"
better-profanity = "^0.7.0"
db = "^0.1.1"
pymongo = "^3.11.3"
wikipedia = "^1.4.0"
jishaku = "^1.20.0.220"
PyNaCl = "^1.4.0"
dnspython = "^2.1.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
